--- a/mobile_pokedex/pubspec.yaml
+++ b/mobile_pokedex/pubspec.yaml
@@ -51,6 +51,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  mobx_codegen: ^2.0.7
   build_runner: ^2.1.11
   json_serializable: ^6.2.0
 
